# mirage

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.fr.md  README.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
python/: README.md  pyproject.toml
python/mirage/: __init__.py  config.py  types.py
python/mirage/accessor/: _hf.py  databricks_volume.py  hf_buckets.py  hf_datasets.py  hf_models.py  hf_spaces.py  lancedb.py
python/mirage/agents/agno/: __init__.py  prompt.py  toolkit.py
python/mirage/cache/file/: io.py
python/mirage/cache/index/: config.py
python/mirage/cli/: README.md  client.py  daemon.py  env.py  settings.py  workspace.py
python/mirage/commands/builtin/: aggregators.py  diff_helper.py  diff_types.py  find_helper.py  grep_helper.py  rg_helper.py
python/mirage/commands/spec/: parser.py
python/mirage/core/chroma/: grep.py  path.py  readdir.py  stat.py
python/mirage/core/databricks_volume/: copy.py  errors.py  exists.py  glob.py  mkdir.py  path.py  read.py  readdir.py  rename.py  rm.py  rmdir.py  stat.py  stream.py  unlink.py  write.py
python/mirage/core/dify/: path.py  readdir.py  search.py  stat.py
python/mirage/core/discord/: read.py  readdir.py  stat.py
python/mirage/core/disk/: find.py  read.py  stat.py  stream.py
python/mirage/core/email/: read.py  readdir.py  stat.py
python/mirage/core/filetype/: feather.py  orc.py  parquet.py
python/mirage/core/gdocs/: read.py  readdir.py  stat.py  unlink.py
python/mirage/core/gdrive/: __init__.py  read.py  readdir.py  stat.py  stream.py
python/mirage/core/github/: read.py  readdir.py  scope.py  search.py  stat.py
python/mirage/core/github_ci/: read.py  readdir.py  stat.py
python/mirage/core/gmail/: read.py  readdir.py  stat.py
python/mirage/core/google/: drive.py
python/mirage/core/gsheets/: read.py  readdir.py  stat.py  unlink.py
python/mirage/core/gslides/: read.py  readdir.py  stat.py  unlink.py
python/mirage/core/hf_buckets/: read.py  readdir.py  stat.py  stream.py  unlink.py  write.py
python/mirage/core/jq/: stream.py
python/mirage/core/lancedb/: __init__.py  glob.py  query.py  read.py  readdir.py  render.py  scope.py  stat.py
python/mirage/core/langfuse/: read.py  readdir.py  stat.py
python/mirage/core/linear/: pathing.py  read.py  readdir.py  stat.py
python/mirage/core/mongodb/: read.py  readdir.py  stat.py  stream.py
python/mirage/core/nextcloud/: copy.py  read.py  readdir.py  rename.py  rm.py  rmdir.py  stat.py  stream.py  unlink.py  write.py
python/mirage/core/notion/: normalize.py  pages.py  pathing.py  read.py  readdir.py  render.py  scope.py  stat.py
python/mirage/core/onedrive/: read.py  stat.py  stream.py  unlink.py
python/mirage/core/postgres/: read.py  readdir.py  stat.py
python/mirage/core/ram/: find.py  read.py  stat.py  stream.py
python/mirage/core/redis/: find.py  read.py  readdir.py  stat.py  stream.py
python/mirage/core/s3/: find.py  read.py  stat.py  stream.py
python/mirage/core/slack/: read.py  readdir.py  stat.py
python/mirage/core/ssh/: read.py  readdir.py  stat.py  stream.py
python/mirage/core/trello/: pathing.py  read.py  readdir.py  stat.py
python/mirage/fuse/: README.md
python/mirage/ops/databricks_volume/: __init__.py  mkdir.py  read.py  readdir.py  rename.py  rmdir.py  stat.py
python/mirage/ops/dify/: search.py
python/mirage/resource/: base.py  registry.py
python/mirage/resource/databricks_volume/: __init__.py  config.py  databricks_volume.py  prompt.py
python/mirage/resource/dify/: prompt.py
python/mirage/resource/disk/: disk.py
python/mirage/resource/gdrive/: prompt.py
python/mirage/resource/lancedb/: config.py
python/mirage/resource/mongodb/: prompt.py
python/mirage/resource/notion/: prompt.py
python/mirage/resource/ram/: ram.py
python/mirage/resource/redis/: redis.py
python/mirage/resource/seaweedfs/: __init__.py  config.py  prompt.py  seaweedfs.py
python/mirage/server/: app.py  daemon.py  env.py  schemas.py
python/mirage/server/routers/: workspaces.py
python/mirage/utils/: errors.py  naming.py  stream.py
python/mirage/workspace/: workspace.py
python/mirage/workspace/executor/: command.py  cross_mount.py  fs_error.py
python/mirage/workspace/mount/: mount.py
python/mirage/workspace/node/: program.py
python/tests/: test_types.py
python/tests/agents/openhands/: test_workspace.py
python/tests/cli/: conftest.py  test_cli_end_to_end.py
python/tests/commands/: test_stderr_warnings.py
python/tests/commands/builtin/: test_filetype_grep_recursive.py  test_filetype_ls.py  test_filetype_rg.py  test_multifile_guard.py  test_zgrep.py
python/tests/commands/native/: test_cross_mount.py  test_diff.py  test_find.py
python/tests/commands/spec/: test_parser.py
python/tests/conformance/: test_conformance.py
python/tests/core/databricks_volume/: conftest.py  test_copy.py  test_exists.py  test_glob.py  test_head.py  test_mkdir.py  test_path.py  test_read.py  test_readdir.py  test_rename.py  test_rm_recursive.py  test_rmdir.py  test_stat.py  test_stream.py
python/tests/integration/: gdrive_mock.py  test_find_pipe_while.py  test_s3_complex.py
python/tests/io/: test_stream.py
python/tests/provision/: test_rollup.py
python/tests/resource/: test_base.py  test_registry.py
python/tests/server/: test_workspaces_router.py
python/tests/utils/: test_stream.py
python/tests/workspace/: test_cache_mount.py  test_cat_streaming.py  test_index_config.py  test_index_integration.py  test_index_writethrough.py  test_io_key_prefix.py  test_workspace.py
(+1267 files in other folders)
